--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: cicd-workflow to create docker image and upload into AWS ECR
+name: cicd-workflow to create docker image 
 on:
   push:
     branches: [ "master" ]
